--- a/sass/output.css
+++ b/sass/output.css
@@ -8612,7 +8612,7 @@ h3 {
 }
 .jumbotron {
   background-image: url(https://res.cloudinary.com/sfp/image/upload/oth/FunimationStoreFront/1498690/English/1498690_English_ContinueWatchingDesktop_a57b1910-e3ab-e811-8175-020165574d09.jpg);
-  height: 100%;
+  height: 347px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
